--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Peter Chang Webdesign Service Portfolio: Homepage</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+
+    <meta http-equiv="refresh" content="5">
   </head>
   <body id="indexpage">
     <div class="grid-container">
@@ -14,10 +16,17 @@
         <!--start of main navigation-->
         <nav class="mainnavigation cell small-12">
           <h1>Logo</h1>
-          <ul>
-            <li>Home</li>
-            <li>Portfolio</li>
-            <li>About</li>
+          <ul class="menu dropdown" data-dropdown-menu>
+            <li><a href="#">Menu</a>
+            <ul class="menu subnavigation">
+
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li> <a href="contact.html">Contact</a></li>
+
+            </ul>
+            <li>
           </ul>
         </nav>
         <!-- end of main navigation -->
@@ -46,7 +55,7 @@
   </div>
 </div>-->
         <!-- end test menu-->
-
+<!--
 <div class="bigphoto cell small-12">
 bigphoto
 </div>
@@ -62,10 +71,51 @@ testimonial t2
 <footer class="cell small-12">
 footer
 </footer>
-
+-->
         <div class="large-12 cell">
           <h1>Welcome to Foundation</h1>
         </div>
+
+        <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+  <div class="orbit-wrapper">
+    <div class="orbit-controls">
+      <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+      <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+    </div>
+    <ul class="orbit-container">
+      <li class="is-active orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://placehold.it/1200x600/999?text=Slide-1" alt="Space">
+          <figcaption class="orbit-caption">Space, the final frontier.</figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://placehold.it/1200x600/888?text=Slide-2" alt="Space">
+          <figcaption class="orbit-caption">Lets Rocket!</figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://placehold.it/1200x600/777?text=Slide-3" alt="Space">
+          <figcaption class="orbit-caption">Encapsulating</figcaption>
+        </figure>
+      </li>
+      <li class="orbit-slide">
+        <figure class="orbit-figure">
+          <img class="orbit-image" src="https://placehold.it/1200x600/666&text=Slide-4" alt="Space">
+          <figcaption class="orbit-caption">Outta This World</figcaption>
+        </figure>
+      </li>
+    </ul>
+  </div>
+  <nav class="orbit-bullets">
+    <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
+    <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+    <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+    <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
+  </nav>
+</div>
 
       </div>
     </div><!-- closes the container-->
