--- a/about.html
+++ b/about.html
@@ -1,23 +1,32 @@
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Peter Chang Webdesign Service Portfolio: Homepage</title>
+  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/app.css">
+
+  <meta http-equiv="refresh" content="5">
+</head>
   <body id="aboutpage">
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
         <!--start of main navigation-->
         <nav class="mainnavigation cell small-12">
-            <h1>Logo</h1>
-          <ul>
-            <li>Home</li>
-            <li>Portfolio</li>
-            <li>About</li>
+          <h1>Logo</h1>
+          <ul class="menu dropdown" data-dropdown-menu>
+            <li><a href="#">Menu</a>
+            <ul class="menu subnavigation">
+
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li> <a href="contact.html">Contact</a></li>
+
+            </ul>
+            <li>
           </ul>
         </nav>
         <!-- end of main navigation -->
