--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Peter Chang Webdesign Service Portfolio: Homepage</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-
+    
     <meta http-equiv="refresh" content="600">
   </head>
   <body id="indexpage">
@@ -30,48 +30,7 @@
           </ul>
         </nav>
         <!-- end of main navigation -->
-        <!--test menu-->
-        <!--
-        <div class="title-bar" data-responsive-toggle="example-animated-menu" data-hide-for="medium">
-  <button class="menu-icon" type="button" data-toggle></button>
-  <div class="title-bar-title">Menu</div>
-</div>
 
-<div class="top-bar" id="example-animated-menu" data-animate="hinge-in-from-top spin-out">
-  <div class="top-bar-left">
-    <ul class="dropdown menu" data-dropdown-menu>
-      <li class="menu-text">Site Title</li>
-      <li>
-        <a href="#">One</a>
-        <ul class="menu vertical">
-          <li><a href="#">One</a></li>
-          <li><a href="#">Two</a></li>
-          <li><a href="#">Three</a></li>
-        </ul>
-      </li>
-      <li><a href="#">Two</a></li>
-      <li><a href="#">Three</a></li>
-    </ul>
-  </div>
-</div>-->
-        <!-- end test menu-->
-<!--
-<div class="bigphoto cell small-12">
-bigphoto
-</div>
-<div class="bigheadline cell small-12">
-bigheadline
-</div>
-<div class="testimonial t1 cell small-12 large-6">
-testitmonial t1
-</div>
-<div class="testimonial t2 cell small-12 large-6">
-testimonial t2
-</div>
-<footer class="cell small-12">
-footer
-</footer>
--->
         <div class="large-12 cell">
           <h1>Welcome to Foundation</h1>
         </div>
@@ -85,35 +44,29 @@ footer
     <ul class="orbit-container">
       <li class="is-active orbit-slide">
         <figure class="orbit-figure">
-          <img class="orbit-image" src="https://placehold.it/1200x600/999?text=Slide-1" alt="Space">
-          <figcaption class="orbit-caption">Space, the final frontier.</figcaption>
+          <img class="orbit-image" src="images/Dolbi_smile_web.jpg" alt="Dolbi smiling">
+          <figcaption class="orbit-caption">This is Dolbi, a rat-terrier mut, with a lot of energy.</figcaption>
         </figure>
       </li>
       <li class="orbit-slide">
         <figure class="orbit-figure">
-          <img class="orbit-image" src="https://placehold.it/1200x600/888?text=Slide-2" alt="Space">
-          <figcaption class="orbit-caption">Lets Rocket!</figcaption>
+          <img class="orbit-image" src="images/Dolbi_tongue_out_web.jpg" alt="Dolbi sticking her tongue out">
+          <figcaption class="orbit-caption">Dolbi is very playful!</figcaption>
         </figure>
       </li>
       <li class="orbit-slide">
         <figure class="orbit-figure">
-          <img class="orbit-image" src="https://placehold.it/1200x600/777?text=Slide-3" alt="Space">
-          <figcaption class="orbit-caption">Encapsulating</figcaption>
+          <img class="orbit-image" src="images/Koa_stare_web.jpg" alt="Koa staring at food">
+          <figcaption class="orbit-caption">This is Koa, a Chipom (Chihuahua Pomeranian), who is often unimpressed.</figcaption>
         </figure>
       </li>
-      <li class="orbit-slide">
-        <figure class="orbit-figure">
-          <img class="orbit-image" src="https://placehold.it/1200x600/666&text=Slide-4" alt="Space">
-          <figcaption class="orbit-caption">Outta This World</figcaption>
-        </figure>
-      </li>
+
     </ul>
   </div>
   <nav class="orbit-bullets">
     <button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
     <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
     <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
-    <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
   </nav>
 </div>
 
