--- a/about.html
+++ b/about.html
@@ -1,29 +1,77 @@
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Peter Chang Webdesign Service Portfolio: Homepage</title>
+  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/app.css">
+
+  <!-- Google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
+
+
+  <!-- <meta http-equiv="refresh" content="5"> -->
+
+</head>
   <body id="aboutpage">
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
         <!--start of main navigation-->
-        <nav class="mainnavigation cell small-12">
-            <h1>Logo</h1>
-          <ul>
-            <li>Home</li>
-            <li>Portfolio</li>
-            <li>About</li>
+        <nav class="mainnavigation cell">
+          <h1>
+            <div>
+              <div class="large-3 small-12">
+                <a href="https://www.youtube.com/user/ULTIMATEWE">
+                <img id="logo1" src="https://yt3.ggpht.com/-nc45cOWmu0Y/AAAAAAAAAAI/AAAAAAAAAAA/P3l44ij0SJ0/s288-c-k-no-mo-rj-c0xffffff/photo.jpg">
+                </a>
+              </div>
+              <div class="large-9 small-12">
+
+                Peter Chang: Graphic Designer
+
+              </div>
+            </div>
+          </h1>
+          <ul class="menu dropdown" data-dropdown-menu>
+            <li><a href="#">Menu</a>
+            <ul class="menu subnavigation">
+
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li> <a href="contact.html">Contact</a></li>
+
+            </ul>
+            <li>
           </ul>
         </nav>
         <!-- end of main navigation -->
+
         <div class="large-12 cell">
-            <h1>Welcome to Foundation</h1>
+            <h1>About</h1>
         </div>
+
+        <div class="large-4 small-12 cell aboutBorder">
+          <img src="images/profile_pic_web.jpg" alt="Me and my mischievous doggies.">
+        </div>
+        <div class="auto cell">
+
+        </div>
+        <div class="large-7 small-12 cell aboutBorder">
+          <p>
+            Hello! My name is Peter Chang, and I am a Graphic Design B.A. and
+            Physics B.S., with a large amount of programming experience.  I enjoy making art,
+            conducting lab experiments, taking things apart and putting them back together,
+            relaxing with videogames, and ofcourse, playing with my dogs.
+            I have a big growth mindset and seem to always "bite off more than I can chew"
+            in terms of taking classes, but that's part of how I learn.
+            I want to create and invent many things, but I require a lot more knowledge before I
+            am ready to do so.
+          </p>
+        </div>
+
       </div>
     </div>
 
