--- a/portfolio.html
+++ b/portfolio.html
@@ -1,29 +1,50 @@
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Peter Chang Webdesign Service Portfolio: Homepage</title>
+  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/app.css">
+
+  <meta http-equiv="refresh" content="5">
+</head>
   <body id="portfoliopage">
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
         <!--start of main navigation-->
         <nav class="mainnavigation cell small-12">
-          <h1>Logo</h1>
-          <ul>
+          <h1>
+            <div>
+              <div class="large-3 small-12">
+                <a href="https://www.youtube.com/user/ULTIMATEWE">
+                <img id="logo1" src="https://yt3.ggpht.com/-nc45cOWmu0Y/AAAAAAAAAAI/AAAAAAAAAAA/P3l44ij0SJ0/s288-c-k-no-mo-rj-c0xffffff/photo.jpg">
+                </a>
+              </div>
+              <div class="large-9 small-12">
+
+                Peter Chang: Graphic Designer
+
+              </div>
+            </div>
+          </h1>
+          <ul class="menu dropdown" data-dropdown-menu>
+            <li><a href="#">Menu</a>
+            <ul class="menu subnavigation">
+
             <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="about.html">About</a></li>
             <li> <a href="contact.html">Contact</a></li>
+
+            </ul>
+            <li>
           </ul>
         </nav>
         <!-- end of main navigation -->
         <div class="large-12 cell">
-          <h1>Welcome to Foundation</h1>
+          <h1>Previous Work</h1>
         </div>
       </div>
     </div>
