pull issue/about/form
-pull issue fixed
-moved to editing direct git
-fixed grid on about page
-put form on contact page

--- a/about.html
+++ b/about.html
@@ -53,14 +53,12 @@
             <h1>About</h1>
         </div>
 
-        <div class="large-4 small-12 cell aboutBorder">
-          <img src="images/profile_pic_web.jpg" alt="Me and my mischievous doggies.">
+        <div class="large-4 small-12 cell">
+          <img class="aboutBorder" src="images/profile_pic_web.jpg" alt="Me and my mischievous doggies.">
         </div>
-        <div class="auto cell">
 
-        </div>
-        <div class="large-7 small-12 cell aboutBorder">
-          <p>
+        <div class="large-8 small-12 cell">
+          <p class="aboutBorder">
             Hello! My name is Peter Chang, and I am a Graphic Design B.A. and
             Physics B.S., with a large amount of programming experience.  I enjoy making art,
             conducting lab experiments, taking things apart and putting them back together,
