portfolio last and start
-can't seem to find sketches

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Peter Chang Webdesign Service Portfolio: Homepage</title>
+  <title>Peter Chang Webdesign Service Portfolio: Contact Page</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
 
@@ -56,7 +56,7 @@
 
         <header id="header" class="info">
         <h2 class="0">Feedback Form</h2>
-        <div class="0">This is my form. Please fill it out. It's awesome!</div>
+        <div class="0">This is my contact form. Please fill it out if you wish to contact me!</div>
         </header><ul>
         <li id="foli1" class="notranslate      ">
         <label class="desc" id="title1" for="Field1">
@@ -88,7 +88,7 @@
 
         tabindex="3"
         onkeyup=""
-        placeholder="Tell me about that hot job offer or how great I am."
+        placeholder="Tell me what you want to me to know."
                ></textarea>
 
         </div>
