--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,15 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Peter Chang Webdesign Service Portfolio: Homepage</title>
+  <title>Peter Chang Webdesign Service Portfolio: Portfolio</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
 
-  <meta http-equiv="refresh" content="5">
+  <!-- Google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
+
+  <!-- <meta http-equiv="refresh" content="5"> -->
+
 </head>
   <body id="portfoliopage">
     <div class="grid-container">
@@ -45,6 +49,9 @@
         <!-- end of main navigation -->
         <div class="large-12 cell">
           <h1>Previous Work</h1>
+        </div>
+        <div class="#">
+          <img src="binary bg_1280.png"
         </div>
       </div>
     </div>
