portfolio page and sketches

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,9 +50,31 @@
         <div class="large-12 cell">
           <h1>Previous Work</h1>
         </div>
-        <div class="#">
-          <img src="binary bg_1280.png"
+        <div class="large-12 small-12">
+          <img class="portfolioImage" src="images/binary_bg_1280.png" alt="Eroded Binary">
         </div>
+
+        <div class="large-6 small-12">
+          <img class="portfolioImage" src="images/eye_box_botleft.jpg" alt="The front of the eye box.">
+        </div>
+        <div class="large-6 small-12">
+          <img class="portfolioImage" src="images/eye_box_botright.jpg" alt="The back of the eye box.">
+        </div>
+
+        <div class="large-6 small-12">
+          <img class="portfolioImage" src="images/MoonBurst_Lucid.jpg" alt="Lucid Moon Burst">
+        </div>
+        <div class="large-6 small-12">
+          <img class="portfolioImage" src="images/MoonBurst_Tunnel.jpg" alt="Color Moon Burst">
+        </div>
+        <div class="large-6 small-12">
+          <img class="portfolioImage" src="images/MoonBurst_Blowout.jpg" alt="Moon Burst Blowout">
+        </div>
+
+        <div class="large-6 small-12">
+          <img class="portfolioImage" src="images/Fiona_portrait_doggified.jpg" alt="The back of the eye box.">
+        </div>
+
       </div>
     </div>
 
