--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,9 @@
         <div class="large-12 cell">
             <h1>Contact</h1>
         </div>
+
+        <!-- contact form -->
+        <div class="formEdits">
         <form id="form1" name="form1" class="cell large-6 small-12" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate
               action="https://pcpetc.wufoo.com/forms/z1j1wyhi1cqtxz6/#public">
 
@@ -107,8 +110,11 @@
         </li>
         </ul>
         </form>
-        <div class="cell small-12 large-6 callout tealbg">other content</div>
       </div>
+      <!-- contact form - end -->
+
+        <!-- <div class="cell small-12 large-6 callout tealbg">other content</div>
+      </div> -->
       </div>
     </div>
 
