--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
           </h1>
           <ul class="menu dropdown" data-dropdown-menu>
-            <li><a href="#">Menu</a>
+            <li class="menuButton"><a href="#">Menu</a>
             <ul class="menu subnavigation">
 
             <li><a href="index.html">Home</a></li>
@@ -47,12 +47,18 @@
             <li>
           </ul>
         </nav>
+        <hr width="90%">
         <!-- end of main navigation -->
 
         <div class="large-12 cell">
           <h1>Welcome to My Portfolio Website</h1>
         </div>
+          <div>
+            <p class="aboutBorder">
+              Please explore my website or look at my doggies below.
+            </p>
 
+            <div>
         <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
   <div class="orbit-wrapper">
     <div class="orbit-controls">
