--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
             </div>
           </h1>
           <ul class="menu dropdown" data-dropdown-menu>
-            <li><a href="#">Menu</a>
+            <li class="menuButton"><a href="#">Menu</a>
             <ul class="menu subnavigation">
 
             <li><a href="index.html">Home</a></li>
@@ -46,6 +46,7 @@
             <li>
           </ul>
         </nav>
+        <hr width="90%">
         <!-- end of main navigation -->
         <div class="large-12 cell">
           <h1>Previous Work</h1>
