--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             </div>
           </h1>
           <ul class="menu dropdown" data-dropdown-menu>
-            <li><a href="#">Menu</a>
+            <li class="menuButton"><a href="#">Menu</a>
             <ul class="menu subnavigation">
 
             <li><a href="index.html">Home</a></li>
@@ -47,6 +47,7 @@
             <li>
           </ul>
         </nav>
+        <hr width="90%">
         <!-- end of main navigation -->
         <div class="large-12 cell">
             <h1>Contact</h1>
