--- a/splash.html
+++ b/splash.html
@@ -21,7 +21,7 @@
               <img src="images/paw_icon_big.svg"></a>
             </div> -->
             <!-- class="bigPaw" -->
-            <div>
+            <div class="bigPaw">
               <canvas id="circle_canvas" width="640" height="1136">
                 <div class="#">
 
