--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,39 @@
         </div>
 
         <div class="large-6 small-12">
-          <img class="portfolioImage" src="images/Fiona_portrait_doggified.jpg" alt="The back of the eye box.">
+          <img class="portfolioImage" src="images/Fiona_portrait_doggified.jpg" alt="Fiona, but Nika-fied">
+        </div>
+
+        <div class="large-12 small-12">
+          <img class="portfolioImage" src="images/Mystery_Bowl.png" alt="I don't know what this bowl thing is.">
+        </div>
+
+        <div class="large-12 small-12">
+          <img class="portfolioImage" src="images/Doggie_Comfort_Brochure_Trifold_Outside.JPG" alt="Doggie Comfort Brochure Outside">
+        </div>
+
+        <div class="large-12 small-12">
+          <img class="portfolioImage" src="images/Doggie_Comfort_Brochure_Trifold_Inside.JPG" alt="Doggie Comfort Brochure Inside">
+        </div>
+
+        <div class="large-12 small-12">
+          <img class="portfolioImage" src="images/The_mammoth_in_the_room.png" alt="The elephant">
+        </div>
+
+        <div class="large-12 small-12">
+          <img class="portfolioImage" src="images/morton_character_redesign.png" alt="Morton and Dolbi Character Design">
+        </div>
+
+        <div class="large-12 small-12">
+          <img class="portfolioImage" src="images/morton_comic_1.png" alt="Morton calls for Dolbi, and Dolbi grabs a lizard instead.">
+        </div>
+
+        <div class="large-12 small-12">
+          <img class="portfolioImage" src="images/morton_comic_2.png" alt="Morton gets exhausted yelling and chasing Dobli. Dolbi trips the hot dog guy, Mario.">
+        </div>
+
+        <div class="large-6 small-12">
+          <img class="portfolioImage" src="images\PC_New_Logo.png" alt="The New Logo">
         </div>
 
       </div>
