Brochure not showing up
WHHHHHHHHYYYYYYYYYYYYYYYYYYYY

IS IT STILL UPLOADING?

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,11 +81,11 @@
         </div>
 
         <div class="large-12 small-12">
-          <img class="portfolioImage" src="images/Doggie_Comfort_Brochure_Trifold_Outside.JPG" alt="Doggie Comfort Brochure Outside">
+          <img class="portfolioImage" src="images/Doggie_Comfort_Brochure_Trifold_Outside.jpg" alt="Doggie Comfort Brochure Outside">
         </div>
 
         <div class="large-12 small-12">
-          <img class="portfolioImage" src="images/Doggie_Comfort_Brochure_Trifold_Inside.JPG" alt="Doggie Comfort Brochure Inside">
+          <img class="portfolioImage" src="images/Doggie_Comfort_Brochure_Trifold_Inside.jpg" alt="Doggie Comfort Brochure Inside">
         </div>
 
         <div class="large-12 small-12">
