--- a/about.html
+++ b/about.html
@@ -58,8 +58,8 @@
           <img class="aboutBorder" src="images/profile_pic_web.jpg" alt="Me and my mischievous doggies.">
         </div>
 
-        <div class="large-8 small-12 cell">
-          <p class="aboutBorder">
+        <div class="large-6 small-12 cell">
+          <p class="aboutBorder aboutText">
             Hello! My name is Peter Chang, and I am a Graphic Design B.A. and
             Physics B.S., with a large amount of programming experience.  I enjoy making art,
             conducting lab experiments, taking things apart and putting them back together,
@@ -70,6 +70,8 @@
             am ready to do so.
           </p>
         </div>
+
+        <div class="large-2 small-12 cell">
 
       </div>
     </div>
