--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
           <h1>Welcome to My Portfolio Website</h1>
         </div>
           <div>
-            <p class="aboutBorder">
+
+            <p class="introText">
               Please explore my website or look at my doggies below.
             </p>
-
-            <div>
+            
+            <!-- slider -->
+            <div class="intro_slider">
         <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
   <div class="orbit-wrapper">
     <div class="orbit-controls">
