--- a/about.html
+++ b/about.html
@@ -18,35 +18,38 @@
   <body id="aboutpage">
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
-        <!--start of main navigation-->
-        <nav class="mainnavigation cell">
+        <!-- header -->
+        <div class="large-2 small-12 TheLogo">
+
+          <img id="logo1" src="images/PC_Logo.png">
+
+        </div>
+        <div class="large-10 small-12 WhoAmI txtwhite">
           <h1>
-            <div>
-              <div class="large-3 small-12">
-                <a href="https://www.youtube.com/user/ULTIMATEWE">
-                <img id="logo1" src="https://yt3.ggpht.com/-nc45cOWmu0Y/AAAAAAAAAAI/AAAAAAAAAAA/P3l44ij0SJ0/s288-c-k-no-mo-rj-c0xffffff/photo.jpg">
-                </a>
-              </div>
-              <div class="large-9 small-12">
+          Peter Chang: Graphic Designer
+        </h1>
+        </div>
 
-                Peter Chang: Graphic Designer
+          <!--start of main navigation-->
+          <nav class="mainnavigation cell small-12 large-2">
 
-              </div>
-            </div>
-          </h1>
-          <ul class="menu dropdown" data-dropdown-menu>
-            <li class="menuButton"><a href="#">Menu</a>
-            <ul class="menu subnavigation">
+            <ul class="menu dropdown" data-dropdown-menu>
+              <li class="menuButton"><a href="#">Explore</a>
+              <ul class="menu subnavigation">
 
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="about.html">About</a></li>
-            <li> <a href="contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="about.html">About</a></li>
+              <li> <a href="contact.html">Contact</a></li>
+              <li> <a href="dogs.html">Dogs</a></li>
 
+              </ul>
+              <li>
             </ul>
-            <li>
-          </ul>
-        </nav>
+          </nav>
+          <div class="cell large-10 small-12 whereAreYou txtwhite">
+              About
+          </div>
         <hr width="90%">
         <!-- end of main navigation -->
 
@@ -58,16 +61,12 @@
           <img class="aboutBorder" src="images/profile_pic_web.jpg" alt="Me and my mischievous doggies.">
         </div>
 
-        <div class="large-6 small-12 cell">
-          <p class="aboutBorder aboutText">
-            Hello! My name is Peter Chang, and I am a Graphic Design B.A. and
-            Physics B.S., with a large amount of programming experience.  I enjoy making art,
-            conducting lab experiments, taking things apart and putting them back together,
-            relaxing with videogames, and ofcourse, playing with my dogs.
-            I have a big growth mindset and seem to always "bite off more than I can chew"
-            in terms of taking classes, but that's part of how I learn.
-            I want to create and invent many things, but I require a lot more knowledge before I
-            am ready to do so.
+        <div class="large-6 small-12 cell aboutBorder aboutText">
+          <p class="">
+                 My name is Peter Chang, and I am a Graphic Designer, specializing in futuristic vector art.  I’m a big fan of cyberpunk art, music, and video games.  I am also a huge dog lover with two dogs of my own.  My goal is to implement my inspirations artistically, from my perspective, and my understanding of science and math.  I am attracted to many different forms of art and you will often find me photographing artistic pieces of interest to learn from and keep my art fresh.
+</p>
+<p>
+                 I obtained my Graphic Design B.A. at CSU East Bay in Hayward, CA, and will be attending the Interaction Design Master’s program in the fall.  I have experience working with the entire Adobe Suite, specializing in Adobe Illustrator and Indesign.  I use a lot of HTML, CSS, and JavaScript for coding websites.  Currently a Personal Assistant and Graphic Designer to Fiona Ma, California State Treasurer, and I also work as a Student Assistant in the CSUEB Astronomy Lab.  With these skills I will create various inventions and manufacture a tangible cyberspace for the entire world to experience.
           </p>
         </div>
 
