--- a/contact.html
+++ b/contact.html
@@ -18,40 +18,41 @@
   <body id="contactpage">
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
-        <!--start of main navigation-->
-        <nav class="mainnavigation cell small-12">
+        <!-- header -->
+        <div class="large-2 small-12 TheLogo">
+
+          <img id="logo1" src="images/PC_Logo.png">
+
+        </div>
+        <div class="large-10 small-12 WhoAmI txtwhite">
           <h1>
-            <div>
-              <div class="large-3 small-12">
-                <a href="https://www.youtube.com/user/ULTIMATEWE">
-                <img id="logo1" src="https://yt3.ggpht.com/-nc45cOWmu0Y/AAAAAAAAAAI/AAAAAAAAAAA/P3l44ij0SJ0/s288-c-k-no-mo-rj-c0xffffff/photo.jpg">
-                </a>
-              </div>
-              <div class="large-9 small-12">
+          Peter Chang: Graphic Designer
+        </h1>
+        </div>
 
-                Peter Chang: Graphic Designer
+          <!--start of main navigation-->
+          <nav class="mainnavigation cell small-12 large-2">
 
-              </div>
-            </div>
-          </h1>
-          <ul class="menu dropdown" data-dropdown-menu>
-            <li class="menuButton"><a href="#">Menu</a>
-            <ul class="menu subnavigation">
+            <ul class="menu dropdown" data-dropdown-menu>
+              <li class="menuButton"><a href="#">Explore</a>
+              <ul class="menu subnavigation">
 
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="about.html">About</a></li>
-            <li> <a href="contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="about.html">About</a></li>
+              <li> <a href="contact.html">Contact</a></li>
+              <li> <a href="dogs.html">Dogs</a></li>
 
+              </ul>
+              <li>
             </ul>
-            <li>
-          </ul>
-        </nav>
+          </nav>
+          <div class="cell large-10 small-12 whereAreYou txtwhite">
+              Contact
+          </div>
         <hr width="90%">
         <!-- end of main navigation -->
-        <div class="large-12 cell">
-            <h1>Contact</h1>
-        </div>
+
 
         <!-- contact form -->
         <div class="formEdits">
