--- a/digital_art.html
+++ b/digital_art.html
@@ -47,76 +47,86 @@
             </ul>
           </nav>
           <div class="cell large-10 small-12 whereAreYou txtwhite">
-              Portfolio
+              <a class="hlHover" href="portfolio.html">Portfolio:</a> Digital Art
           </div>
         <hr width="90%">
         <!-- end of main navigation -->
 
-        <div class="cell large-6 small-12">
-          <div class="thumbz">
-            <img class="float-center" src="images\cloth_thumb.png" height="500px" width="500px">
-            <p class="txtThumb"> Senior Project </p>
-          </div>
-        </div>
-        <div class="cell large-6 small-12">
-          <div class="thumbz">
-            <a href="digital_art.html">
-              <img class="float-center" src="images/digital_thumb.png" height="500px" width="500px">
-              <p class="txtThumb"> Digital Art </p>
-            </a>
 
-          </div>
-        </div>
-        <div class="cell large-6 small-12">
-          <div class="thumbz">
-            <a href="photography.html">
-              <img class="float-center" src="images/photo_thumb.png" height="500px" width="500px">
-              <p class="txtThumb"> Photography </p>
-            </a>
-          </div>
-        </div>
-        <div class="cell large-6 small-12">
-          <div class="thumbz">
-            <a href="painting.html">
-              <img class="float-center" src="images/paint_thumb.png" height="500px" width="500px">
-              <p class="txtThumb"> Painting </p>
-            </a>
-          </div>
-        </div>
-
-        <!-- <div class="large-12 cell">
-          <h1>Previous Work</h1>
-        </div>
         <div class="large-12 small-12">
           <img class="portfolioImage" src="images/binary_bg_1280.png" alt="Eroded Binary">
         </div>
+        <div class="cell large-3 small-12">
+          <p class="txtThumb">
+        <i>Eroded Binary</i>
+      </p>
+      </div>
+        <div class="cell large-9 small-12">
+          <p class="txtDesc">
+        I have a fascination with coding.  Couldn't find corrupted looking binary.  Made it myself.
+      </p>
+      </div>
 
-        <div class="large-6 small-12">
+
+
+
+        <div class="large-6 small-12 portfolioSpacing">
           <img class="portfolioImage" src="images/eye_box_botleft.jpg" alt="The front of the eye box.">
         </div>
-        <div class="large-6 small-12">
+        <div class="large-6 small-12 portfolioSpacing">
           <img class="portfolioImage" src="images/eye_box_botright.jpg" alt="The back of the eye box.">
         </div>
+        <div class="cell large-3 small-12">
+          <p class="txtThumb">
+        <i>Cyber Eye</i>
+      </p>
+      </div>
+        <div class="cell large-9 small-12">
+          <p class="txtDesc">
+        Packaging project based around cybernetic body parts such as the eye and the brain. WMH either stands for "We Make Humans" or "We Machine Humans".
+      </p>
+      </div>
 
-        <div class="large-6 small-12">
+        <div class="large-6 small-12 portfolioSpacing">
           <img class="portfolioImage" src="images/MoonBurst_Lucid.jpg" alt="Lucid Moon Burst">
         </div>
-        <div class="large-6 small-12">
+        <div class="large-6 small-12 portfolioSpacing">
           <img class="portfolioImage" src="images/MoonBurst_Tunnel.jpg" alt="Color Moon Burst">
         </div>
         <div class="large-6 small-12">
           <img class="portfolioImage" src="images/MoonBurst_Blowout.jpg" alt="Moon Burst Blowout">
         </div>
-
         <div class="large-6 small-12">
+        <div class="cell">
+          <p class="txtThumb">
+        <i>Moon Burst</i>
+      </p>
+      </div>
+        <div class="cell">
+          <p class="txtDesc">
+        A progression of manipulation in Adobe Photoshop to create a variety of sun shots.
+      </p>
+      </div>
+    </div>
+
+        <div class="large-6 small-12 portfolioSpacing">
           <img class="portfolioImage" src="images/Fiona_portrait_doggified.jpg" alt="Fiona, but Nika-fied">
         </div>
+        <div class="large-6 small-12 portfolioSpacing">
+        <div class="cell">
+          <p class="txtThumb">
+        <i>WereFiona</i>
+      </p>
+      </div>
+        <div class="cell">
+          <p class="txtDesc">
+        Hee hee hee hee, I mixed a friend of mine with her dog.
+      </p>
+      </div>
+    </div>
 
-        <div class="large-12 small-12">
-          <img class="portfolioImage" src="images/Mystery_Bowl.png" alt="I don't know what this bowl thing is.">
-        </div>
 
-        <div class="large-12 small-12">
+        <div class="large-12 small-12 portfolioSpacing">
           <img class="portfolioImage" src="images/Doggie_Comfort_Brochure_Trifold_Outside.png" alt="Doggie Comfort Brochure Outside">
         </div>
 
@@ -124,11 +134,19 @@
           <img class="portfolioImage" src="images/Doggie_Comfort_Brochure_Trifold_Inside.png" alt="Doggie Comfort Brochure Inside">
         </div>
 
-        <div class="large-12 small-12">
-          <img class="portfolioImage" src="images/The_mammoth_in_the_room.png" alt="The elephant">
-        </div>
+        <div class="cell large-3 small-12">
+          <p class="txtThumb">
+        <i>Doggie Comfort</i>
+      </p>
+      </div>
+        <div class="cell large-9 small-12">
+          <p class="txtDesc">
+        Brochure about the benefits of having your dog sleep in your bed.
+      </p>
+      </div>
 
-        <div class="large-12 small-12">
+
+        <div class="large-12 small-12 portfolioSpacing">
           <img class="portfolioImage" src="images/morton_character_redesign.png" alt="Morton and Dolbi Character Design">
         </div>
 
@@ -140,10 +158,20 @@
           <img class="portfolioImage" src="images/morton_comic_2.png" alt="Morton gets exhausted yelling and chasing Dobli. Dolbi trips the hot dog guy, Mario.">
         </div>
 
-        <div class="large-6 small-12">
-          <img class="portfolioImage" src="images\PC_New_Logo.png" alt="The New Logo">
-        </div> -->
 
+        <div class="cell large-3 small-12">
+          <p class="txtThumb">
+        <i>Morton</i>
+      </p>
+      </div>
+        <div class="cell large-9 small-12">
+          <p class="txtDesc">
+        Morton is character I created based off of cartoons like <i>My Gym Partner's a Monkey</i>, <i>Camp Lazlo</i>, <i>Clarence</i>, and lots of other cartoons I could name off.
+        He has an animal companion, Bee, based off of my dog Dolbi who I commonly just call by Bi/Bee.  His stories and lifestyle are based off of mine, but turned more "fun", everything
+        is fun, just like in <i>Clarence</i>, but there are also those crazy moments inspired by <i>My Gym Partner's a Monkey</i>. Like, I remember in that one episode where the animal school gets
+        introduced to junk food, and they absolutely love it, so they put it in the cafeteria, and they all get fat and unhealthy, but at the end they blame Lion because he introduced it.
+      </p>
+      </div>
 
         <!-- end container -->
       </div>
