--- a/photography.html
+++ b/photography.html
@@ -1,24 +1,22 @@
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peter Chang Webdesign Service Portfolio: Homepage</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Peter Chang Webdesign Service Portfolio: Portfolio</title>
+  <link rel="stylesheet" href="css/foundation.css">
+  <link rel="stylesheet" href="css/app.css">
 
-    <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
+  <!-- Google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
 
+  <!-- <meta http-equiv="refresh" content="5"> -->
 
-    <!-- <meta http-equiv="refresh" content="1500"> -->
-
-  </head>
-  <body id="indexpage">
+</head>
+  <body id="portfoliopage">
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
-
         <!-- header -->
         <div class="large-2 small-12 TheLogo">
 
@@ -49,37 +47,35 @@
             </ul>
           </nav>
           <div class="cell large-10 small-12 whereAreYou txtwhite">
-              Welcome to My Portfolio Website
+              <a class="hlHover" href="portfolio.html">Portfolio:</a> Photography
           </div>
         <hr width="90%">
         <!-- end of main navigation -->
 
-          <div>
-
-            <div class="comingSoon">
-              <a href="portfolio.html">
-              <img src="images\cloth_2.png">
-              </a>
-            </div>
-
-            <div>
-
-            </div>
-
-            <div>
-
-            </div>
-
-            <div>
-
-            </div>
-
-            <div>
-
-            </div>
+        <div class="large-12 small-12">
+          <img class="portfolioImage" src="images/Mystery_Bowl.png" alt="I don't know what this bowl thing is.">
 
 
-          </div><!-- closes the container-->
+
+        </div>
+        <div class="cell large-3 small-12">
+          <p class="txtThumb">
+        <i>Mystery Bowl</i>
+      </p>
+      </div>
+        <div class="cell large-9 small-12">
+          <p class="txtDesc">
+        Yeah, I don't really know where this came from.  Speculation tells me the bowl is some sort of experiment used to
+        examine intereference patterns of light on itself, plus a random DI water squirter.
+      </p>
+      </div>
+
+        
+
+
+        <!-- end container -->
+      </div>
+    </div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
