Added some imgs

--- a/dogs.html
+++ b/dogs.html
@@ -54,7 +54,7 @@
         <hr width="90%">
         <!-- end of main navigation -->
 
-      
+
           <div>
 
             <p class="introText">
@@ -98,6 +98,13 @@
   </nav>
 </div>
 
+      <div class="large-12 small-12 dogPhoto">
+      <img src="images/Sleepy_Bee.png" alt="Bee Asleep">
+      </div>
+
+      <div class="large-12 small-12 dogPhoto">
+      <img src="images/Awake_Bee.png" alt="Bee Awake">
+      </div>
       </div>
     </div><!-- closes the container-->
 
