--- a/painting.html
+++ b/painting.html
@@ -66,6 +66,20 @@
       </p>
       </div>
 
+      <div class="large-12 small-12 portfolioSpacing">
+        <img class="portfolioImage" src="images/House.png" alt="The house">
+      </div>
+      <div class="cell large-3 small-12">
+        <p class="txtThumb">
+      <i>My House</i>
+    </p>
+    </div>
+      <div class="cell large-9 small-12">
+        <p class="txtDesc">
+      It is meant to be touched, to feel my house. (Also uses paint for my house.)
+    </p>
+    </div>
+
         <!-- end container -->
       </div>
     </div>
