--- a/photography.html
+++ b/photography.html
@@ -70,7 +70,19 @@
       </p>
       </div>
 
-        
+      <div class="large-12 small-12 portfolioSpacing">
+        <img class="portfolioImage" src="images/HN.png" alt="A shot of Honolulu">
+      </div>
+      <div class="cell large-3 small-12">
+        <p class="txtThumb">
+      <i>Honolulu</i>
+    </p>
+    </div>
+      <div class="cell large-9 small-12">
+        <p class="txtDesc">
+      Taken from my condo in Oahu, HI.
+    </p>
+    </div>
 
 
         <!-- end container -->
