--- a/photography.html
+++ b/photography.html
@@ -71,6 +71,20 @@
       </div>
 
       <div class="large-12 small-12 portfolioSpacing">
+        <img class="portfolioImage" src="images/Soda.png" alt="Carbonation">
+      </div>
+      <div class="cell large-3 small-12">
+        <p class="txtThumb">
+      <i>Carbonation</i>
+    </p>
+    </div>
+      <div class="cell large-9 small-12">
+        <p class="txtDesc">
+      A shot through a mango Italian soda.
+    </p>
+    </div>
+
+      <div class="large-12 small-12 portfolioSpacing">
         <img class="portfolioImage" src="images/HN.png" alt="A shot of Honolulu">
       </div>
       <div class="cell large-3 small-12">
@@ -83,6 +97,20 @@
       Taken from my condo in Oahu, HI.
     </p>
     </div>
+
+    <div class="large-12 small-12 portfolioSpacing">
+      <img class="portfolioImage" src="images/Moon.png" alt="Telescopes!">
+    </div>
+    <div class="cell large-3 small-12">
+      <p class="txtThumb">
+    <i>Moon Shot</i> (missing name)
+  </p>
+  </div>
+    <div class="cell large-9 small-12">
+      <p class="txtDesc">
+    iPhone through a telescope capturing a special feature of a rarely seen rille.
+  </p>
+  </div>
 
 
         <!-- end container -->
