--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </ul>
           </nav>
           <div class="cell large-10 small-12 whereAreYou txtwhite">
-              Welcome to My Portfolio Website
+              Welcome to My Website
           </div>
         <hr width="90%">
         <!-- end of main navigation -->
